--- a/topic-05-orm-peewee/templates/index.html
+++ b/topic-05-orm-peewee/templates/index.html
@@ -1,6 +1,14 @@
 <html>
-    <head></head>
+    <head>
+        <style>
+            /* Add some spacing for better readability */
+            h3, table, a {
+                margin-bottom: 10px;
+            }
+        </style>
+    </head>
     <body>
+        <!-- Pet List Section -->
         <h3>Pet List:</h3>
         <table>
             <tr>
@@ -28,29 +36,7 @@
         <hr/>
         <a href="/add_pet">Create New Pet</a>
         <hr/>
-        <h3>Kind List:</h3>
-        <table>
-            <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Food</th>
-                <th>Noise</th>
-                <th>Actions</th>
-            </tr>
-            {% for kind in kinds %}
-            <tr>
-                <td>{{ kind.id }}</td>
-                <td>{{ kind.kind_name }}</td>
-                <td>{{ kind.food }}</td>
-                <td>{{ kind.noise }}</td>
-                <td>
-                    <a href="/kind/update/{{ kind.id }}">Update</a> | 
-                    <a href="/kind/delete/{{ kind.id }}">Delete</a>
-                </td>
-            </tr>
-            {% endfor %}
-        </table>
-        <hr/>
-        <a href="/add_kind">Create New Kind</a>
+        <!-- Link to Kind List Page -->
+        <a href="/kind_list">Show Kind List</a>
     </body>
 </html>
