--- a/topic-05-orm-peewee/templates/add_pet.html
+++ b/topic-05-orm-peewee/templates/add_pet.html
@@ -7,13 +7,7 @@
             <p>Animal Name: <input name="name" required /></p>
             <p>Age: <input name="age" type="number" required /></p>
             <p>Owner: <input name="owner" required /></p>
-            <p>Kind:
-                <select name="kind_id" required>
-                    {% for kind in kinds %}
-                        <option value="{{ kind.id }}">{{ kind.kind_name }}</option>
-                    {% endfor %}
-                </select>
-            </p>
+            <p>Kind: <input name="kind_name" required /></p>
             <hr/>
             <button type="submit">Create</button>
             <a href="/">Cancel</a>
