--- a/topic-05-orm-peewee/templates/index.html
+++ b/topic-05-orm-peewee/templates/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <!-- Pet List Section -->
-        <h3>Pet List:</h3>
+        <h3>List:</h3>
         <table>
             <tr>
                 <th>ID</th>
@@ -17,7 +17,7 @@
                 <th>Age</th>
                 <th>Owner</th>
                 <th>Kind</th>
-                <th>Actions</th>
+
             </tr>
             {% for pet in pets %}
             <tr>
@@ -37,6 +37,6 @@
         <a href="/add_pet">Create New Pet</a>
         <hr/>
         <!-- Link to Kind List Page -->
-        <a href="/kind_list">Show Kind List</a>
+        <a href="/kind_list">Pet Kinds</a>
     </body>
 </html>
